fixed the forum that hasd a bug(show comments and add comment were not showing.). and also deleted the shop keepers(decided by the team)

--- a/oldCity/oldCity_app/static/css/Forum.css
+++ b/oldCity/oldCity_app/static/css/Forum.css
@@ -1,6 +1,6 @@
 h1 {color : #DB944D; font-size :100px;font-weight : bold;text-shadow ;text-align:center;
 text-shadow: 5px 5px 5px #FFCC66;}
-
+body {color : #ffffff; font-size :20px;text-align:center;}
 #choose_shop {color:orange;font size : 20px;text-align:center;}
 
 html{
